Implement Transaction Controller, Validator and Update docs
